--- a/sea.css
+++ b/sea.css
@@ -28,8 +28,8 @@ h2{
 }
 
 .sun{
-  width: 50px;
-  height: 50px;
+  width: 5vh;
+  height: 5vh;
   background: #ff6d00;
   border-radius: 50%;
   position: absolute;
