--- a/sea.css
+++ b/sea.css
@@ -58,9 +58,10 @@ h2{
 }
 
 .sunrise{
+  border: 3px red solid;
   position: absolute;
-  width: 50px;
-  height: 300px;
+  width: 5vh;
+  height: 23vh;
   top: 10%;
   left: 15%;
 }
